Updated index.html to take only .mp3 files as input

--- a/Music Visualizer/index.html
+++ b/Music Visualizer/index.html
@@ -15,7 +15,7 @@
         id="music"
         controls
       ></audio>
-      <input type="file" id="fileInput" />
+      <input type="file" accept=".mp3" id="fileInput" />
       <button id="animate">Animate</button>
     </div>
     <h1 id="song-heading">In The End</h1>
